# Solitario

./: .gitignore  AUTHORS  CCard.h  CCardRegion.cpp  CCardRegion.h  CCardStack.cpp  CCardStack.h  CGame.cpp  CGame.h  CMakeLists.txt  CustomMenu.cpp  CustomMenu.h  EngineApp.cpp  EngineApp.h  GameSettings.cpp  GameSettings.h  Languages.cpp  Languages.h  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  Solitario.prj  Solitario.pws  Solitario2.pws  StdAfx.h  android.md  autogen.sh  cHightScoreMgr.cpp  cHightScoreMgr.h  cMusicManager.cpp  cMusicManager.h  config.h  config.status  configure  configure.ac  configure.in  credits.cpp  (+14 more)
container/: Dockerfile  solitario-ubuntu-22.04.def  solitario-virtualgl-ubuntu-22.04.def
data/: Makefile  Makefile.am  Makefile.in  default_options.ini  options.ini
data/images/: Makefile  Makefile.am  Makefile.in
data/mazzi/: Makefile  Makefile.am  Makefile.in  tarock_piemonte.pac  trieste_cards.pac
data/music/: watermusic.it
deploy/: MIT.LICENSE  Readme_Installer.md  build_the_setup.rb  setup_creator.rb  target_deploy_info.yaml
deploy/nsi_install/: setup_muster.nsi_tm
help-source/: solitario.tex  solitario.tuc
libini/: Makefile  Makefile.am  Makefile.in  headings.h  headings.i  ini.cpp  ini.h  keys.h  keys.i  list.i  types.i
mysys2/: Util-mysys.cpp
src/: AppGfx.cpp  AppGfx.h  CCard.h  CCardRegion.cpp  CCardRegion.h  CCardStack.cpp  CCardStack.h  CGame.cpp  CGame.h  CardGfx.cpp  CardGfx.h  CardRegionGfx.cpp  CardRegionGfx.h  CardStackGfx.cpp  Config.h  Config.h.in  Credits.c  Credits.cpp  Credits.h  CustomMenu.cpp  CustomMenu.h  DeckType.cpp  DeckType.h  EngineApp.cpp  EngineApp.h  ErrorInfo.cpp  ErrorInfo.h  Fading.c  Fading.cpp  Fading.h  FastDelegate.h  Fonts.cpp  Fonts.h  GameSettings.cpp  GameSettings.h  GfxUtil.cpp  GfxUtil.h  HighScoreMgr.cpp  HighScoreMgr.h  HightScoreMgr.cpp  (+39 more)
src/App/: AppGfx.cpp  AppGfx.h  CardGfx.cpp  CardGfx.h  Credits.cpp  DeckType.h  Fading.h  GameSettings.h  HighScore.cpp  HighScore.h  Languages.cpp  Languages.h  MenuMgr.cpp  MenuMgr.h  MusicManager.cpp  OptionsGfx.cpp  OptionsGfx.h  TraceService.h  Traits.h  resource.h
src/CompGfx/: ButtonGfx.cpp  ButtonGfx.h  CheckBoxGfx.cpp  CheckBoxGfx.h  ComboGfx.cpp  ComboGfx.h  LabelGfx.cpp  LabelGfx.h  LabelLinkGfx.cpp  LabelLinkGfx.h  MesgBoxGfx.cpp  MesgBoxGfx.h  cButtonGfx.cpp  cButtonGfx.h  cCheckBoxGfx.cpp  cCheckBoxGfx.h  cComboGfx.cpp  cComboGfx.h  cLabelGfx.cpp  cLabelGfx.h  cLabelLinkGfx.cpp  cLabelLinkGfx.h
src/GameGfx/: CardRegionGfx.cpp  CardRegionGfx.h  CardStackGfx.cpp  CardStackGfx.h  CurrentTime.cpp  CurrentTime.h  SolitarioGfx.cpp  SolitarioGfx.h
src/libini/: Makefile  Makefile.am  Makefile.in
vs15/solitario-vs15/: solitario-vs15.sln  solitario-vs15.vcxproj  solitario-vs15.vcxproj.filters
vs15/vs-source/: TraceService.cpp  TraceService.h  Util-vs.cpp
