
m4_define([solitario_VERSION], [1.7])
AC_INIT([solitario], 
        m4_defn([solitario_VERSION]), 
        [6colpiunbucosolo@gmx.net],
        [solitario-]m4_defn([solitario_VERSION]),
        [https://invido.it])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_PROG_CXX
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
  Makefile
  src/Makefile
  src/libini/Makefile
])
AC_OUTPUT