datadir = $(prefix)/share/$(PACKAGE)/mazzi
data_DATA = \
bergamo_cards.pac\
bologna_cards.pac\
carte_trevisane.pac\
genova_cards.pac\
mazzo_piac.pac\
milano_cards.pac\
napoli_cards.pac\
piemonte_cards.pac\
romagna_cards.pac\
sardegna_cards.pac\
sicilia_cards.pac\
toscana_cards.pac\
trento_cards.pac\
trieste_cards.pac

EXTRA_DIST = $(data_DATA)

MAINTAINERCLEANFILES = Makefile.in
